fix background color overlap

--- a/src/Components/TopBanner.module.css
+++ b/src/Components/TopBanner.module.css
@@ -9,6 +9,7 @@
     align-items: center;
     position: relative;
     background-color: var(--secondary-color);
+    background: linear-gradient(var(--secondary-color) 0%, var(--secondary-color) 97%, #ffffff 98%, #ffffff 100%);
     overflow: hidden;
 }
 
@@ -20,7 +21,7 @@
     height: fit-content;
     width: 110%;
     margin-left: -20px;
-    margin-bottom: -4px;
+    /* margin-bottom: -4px; */
 }
 
 .bird {
